# mimicChess

./: .clang-format  .clang-tidy  .flake8  .gitignore  .gitmodules  README.md  cfg.yml  cfg_finetune.yml  create_dataset.py  create_trainset.py  dbg_cfg.yml  launch_training.sh  merge_parquets.py  pgn_tokens.json  position_analysis.py  predict.py  pyproject.toml  remote_provision.py  split_parquet_dataset.py  test_tokenizer.py  tokens_fen_only_2025_04.json  tokens_pgn_only_2025_04.json  train.py  train_tokenizer.py
dataPrep/: download_and_parse_lichess.py  generate_cheating_testdata.py  whiten_elos.py
lib/: __init__.py  evaluation.py
lib/dataset/: __init__.py  download_and_parse_lichess.py  download_lichess.py  generate_cheating_testdata.py  list.txt  parse_lichess.py  stats.py
lib/dataset/cpp/: CMakeLists.txt
lib/dataset/cpp/filterData/: filterData.cpp
lib/dataset/cpp/pgnProcessing/: CMakeLists.txt  eloWriter.h  parallelParser.cpp  parallelParser.h  parserPool.h  setup.py
lib/dataset/cpp/processZst/: CMakeLists.txt  eloWriter.h  parallelParser.cpp  parallelParser.h  parquetWriter.cpp  parquetWriter.h  parser.h  processZst.cpp  serialParser.cpp  serialParser.h
lib/dataset/cpp/processZst/lib/: CMakeLists.txt  parseMoves.cpp  parseMoves.h
lib/dataset/cpp/profiling/: CMakeLists.txt
lib/dataset/cpp/reorgParquets/: CMakeLists.txt  reorgParquets.cpp  test.py
lib/dataset/cpp/utils/: CMakeLists.txt  parquetReader.h  parquetWriter.cpp  parquetWriter.h  threadPool.h
lib/training/: __init__.py  chess_parquet_dataset.py  mmc.py  mmcdataset.py  model.py
provisioning/: environment.yml  environment_aarch64.yml  environment_nvidia.yml  provision.sh  requirements.txt  requirements_nvidia.txt
