project(ProcessZst)
add_executable(processZst processZst.cpp parallelParser.cpp serialParser.cpp eloWriter.cpp)
set(CMAKE_CXX_STANDARD_REQUIRED True)
find_package(absl REQUIRED PATHS /opt/homebrew/lib/cmake/absl)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()
add_subdirectory(lib)
target_link_libraries(processZst PRIVATE absl::flags_parse)
target_link_libraries(processZst PRIVATE pgnParser profiler utils)
target_include_directories(processZst PRIVATE "${PROJECT_SOURCE_DIR}/lib")
target_include_directories(processZst PRIVATE "${PROJECT_SOURCE_DIR}/..")
target_include_directories(processZst PRIVATE "${PROJECT_SOURCE_DIR}/../include")
