project(ProcessZst)
add_executable(processZst processZst.cpp)
set(CMAKE_CXX_STANDARD_REQUIRED True)
find_package(absl REQUIRED PATHS /opt/homebrew/lib/cmake/absl)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()
target_link_libraries(processZst PRIVATE absl::flags_parse)
target_link_libraries(processZst PRIVATE pgnProcessing profiler utils)
target_include_directories(processZst PRIVATE "${PROJECT_SOURCE_DIR}/..")
target_include_directories(processZst PRIVATE "${PROJECT_SOURCE_DIR}/../include")
