project(reorgParquets)
add_executable(reorgParquets reorgParquets.cpp)
set(CMAKE_CXX_STANDARD_REQUIRED True)
find_package(absl REQUIRED PATHS /opt/homebrew/lib/cmake/absl)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()
target_link_libraries(reorgParquets PRIVATE absl::flags_parse)
target_link_libraries(reorgParquets PRIVATE utils)
target_include_directories(reorgParquets PRIVATE "${PROJECT_SOURCE_DIR}/..")