add_library(pgnParser parseMoves.cpp decompress.cpp)
target_link_libraries(utils)
target_include_directories(pgnParser PUBLIC "${PROJECT_SOURCE_DIR}")
target_include_directories(pgnParser PUBLIC "${PROJECT_SOURCE_DIR}/..")
if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
	set(CMAKE_PREFIXPATH /opt/homebrew)
	#target_include_directories(PgnParser PUBLIC /opt/homebrew/include)
	#target_include_directories(PgnParser PUBLIC /opt/homebrew/Cellar/zstd/1.5.6/include)
	#find_package(zstd REQUIRED)
	#target_link_libraries(PgnParser PRIVATE zstd::libzstd)
endif()
#if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
#	target_link_libraries(PgnParser PRIVATE zstd)
#endif()

find_package(zstd REQUIRED)
target_link_libraries(pgnParser PRIVATE zstd::libzstd)

find_package(re2 REQUIRED)
target_link_libraries(pgnParser PRIVATE re2::re2)
